# GistsCollection

./: .gitignore  LICENSE  README.md  go.mod
.github/: dependabot.yml
.github/workflows/: hello-world-example.yaml  parallel-jobs.yaml
AWS/HelloNode/: README.md
AWS/ServerlessHarness/: template.yaml
Angular2/GettingStartedWithRxJS/: index.html  main.ts  webpack.config.js
AngularJS/MEANMaps/: bower.json  package.json  server.js
Aurelia/jsenvdemo/: config.js  package.json
Boilerplates/GulpExpressBrowserSync/: app.js  gulpfile.js  package.json
C#/CsharpLanguageInternals/: hello.il  hello.res  program.cs
C#/EventsDelegatesAndLambdas/: EventsDelegatesAndLambdas.sln
C#/GenericMemoizer/: GenericMemoizer.sln
C#/GigHub/: GigHub.sln
C#/IocPractice/: IocPractice.sln
C#/MySeleniumApi/: MySeleniumApi.sln
C#/Shuffler/: Shuffler.sln
Distributed/Maelstrom/: README.md
Docker/DockerDotNetCore/: DockerDotNetCore.csproj  DockerDotNetCore.sln  Dockerfile  Program.cs  Startup.cs  WeatherForecast.cs
Docker/GettingStarted/: notes.txt
Docker/Kubernetes/: notes.md
Elixir/Phoenix/: README.md
Elixir/portal/: README.md  mix.exs
Errata/Auto/: Vehicle Information & Comparisons.md
Errata/Obsidian/: Photography Journal.md
Go/: README.md
Go/basics/: hello.go
Go/byexample/: atomic-counters  atomic-counters.go  channel-buffering  channel-buffering.go  channel-directions  channels  (+13 more)
Rust/OS/my_os/: Cargo.toml
Rust/OS/my_os/.cargo/: config.toml
Rust/OS/my_os/errata/: build.txt  env.txt
Rust/OS/my_os/src/: main.rs
brew/: brew-leaves.txt  brew-list.txt
(+2572 files in other folders)
